Developed the login api, provided the user authentication with the passport local startagy
