# apidocs/apidocs.yml
@@ -9,8 +9,33 @@ tags:
 - name: "DMS"
   description: "Document Management System API"
 schemes:
-- "http" 
+  - "http" 
+consumes:
+  - "application/json"
+produces:
+  - "application/json"
 paths:
+  /login:
+    post:
+      tags:
+      - "DMS"
+      summary: "Login"
+      description: "Login"
+      operationId: "Login"
+      produces:
+      - "application/json"
+      parameters:
+        - in: "body"
+          name: "body"
+          description: "Login"
+          required: true
+          schema:
+            $ref: "#/definitions/LoginRequest"
+      responses:
+        "200":
+          description: "Success"
+          schema: 
+            $ref: "#/definitions/LoginResponse"
   /folder:
     post:
       tags:
@@ -21,6 +46,10 @@ paths:
       produces:
       - "application/json"
       parameters:
+        - in: "header"
+          name: access-token
+          required: true
+          type: string
         - in: "body"
           name: "body"
           description: "Create folder"
@@ -42,6 +71,10 @@ paths:
       produces:
       - "application/json"
       parameters:
+        - name: access-token
+          in: header
+          required: true
+          type: string
         - in: "body"
           name: "body"
           description: "Create file"
@@ -62,12 +95,32 @@ paths:
       operationId: "DocumentList"
       produces:
       - "application/json"
+      parameters:
+        - name: access-token
+          in: header
+          required: true
+          type: string
       responses:
         "200":
           description: "Success"
           schema: 
             $ref: "#/definitions/GetResponse"
 definitions:
+  LoginRequest:
+    type: "object"
+    properties:
+      username:
+        type: "string"
+        example: "Admin"
+      password: 
+        type: "string"
+        example: "Admin@123"
+  LoginResponse:
+    type: "object"
+    properties:
+      access-token:
+        type: "string"
+        example: "eyJhbGciOiJIUzI1NiIsInR5csD6IkpXVCJ9.eyJpZCI6IkFkbWluIiwifWF0IjoxGjA2MTM2OTE5fQ.HMxb_tDJrC27iRx9DJLZKSUyMe9otfgfIfdkRFVc9z8"
   CreateFileParams:
     type: "object"
     properties:
