# app/validations/dms-validation-schema.js
@@ -9,6 +9,26 @@ const validations = {
             },
             errorMessage: 'Folder name is required',
         }
+    },
+    usernameValidation: {
+        in: ['body'],
+        exists: {
+            options: {
+                checkNull: true,
+                checkFalsy: true,
+            },
+            errorMessage: 'username is required',
+        }
+    },
+    passwordValidation: {
+        in: ['body'],
+        exists: {
+            options: {
+                checkNull: true,
+                checkFalsy: true,
+            },
+            errorMessage: 'password is required',
+        }
     }
 }
 
@@ -18,6 +38,10 @@ const validationSchema = {
     },
     createFileSchema: {
         name: validations.nameValidation
+    },
+    loginValidation: {
+        username: validations.usernameValidation,
+        password: validations.passwordValidation
     }
 }
 
